--- a/.github/workflows/build-jekyl.yml
+++ b/.github/workflows/build-jekyl.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  github-pages:
+  page_build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
