--- a/.github/workflows/build-jekyl.yml
+++ b/.github/workflows/build-jekyl.yml
@@ -21,3 +21,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
+#      - shell: 'bash'
+#        run: |
+#          ls -l ./_site
