--- a/src/_data/navigation.yml
+++ b/src/_data/navigation.yml
@@ -1,12 +1,12 @@
 - name: Hjem
-  link: /
+  link: /eit-satellitt-i-norge/
 - name: Om
-  link: /about
+  link: eit-satellitt-i-norge/about
 - name: Innkjøpsliste
-  link: /purchase
+  link: /eit-satellitt-i-norge/purchase
 - name: Teori og forklaringer
-  link: /theory
+  link: /eit-satellitt-i-norge/theory
 - name: Guide
-  link: /guide
+  link: /eit-satellitt-i-norge/guide
 - name: Satellitter
-  link: /satellites
+  link: /eit-satellitt-i-norge/satellites
