--- a/src/_data/navigation.yml
+++ b/src/_data/navigation.yml
@@ -2,7 +2,7 @@
   link: /eit-satellitt-i-norge/satellitter/
 - name: Instruksjoner
   link: /eit-satellitt-i-norge/instruksjoner/
+- name: Teori
+  link: /eit-satellitt-i-norge/teori/
 - name: FAQ
   link: /eit-satellitt-i-norge/faq/
-- name: Mer info
-  link: /eit-satellitt-i-norge/mer-info/
