lagt inn litt teori

--- a/src/_data/theory.yml
+++ b/src/_data/theory.yml
@@ -2,5 +2,7 @@
   link: /eit-satellitt-i-norge/teori/
 - name: Satellitter
   link: /eit-satellitt-i-norge/teori/satellitter/
-- name: Begrepsliste
-  link: /eit-satellitt-i-norge/teori/begrepsliste/
+- name: Begrepsforklaring
+  link: /eit-satellitt-i-norge/teori/begrepsforklaring/
+- name: Elektronikk
+  link: /eit-satellitt-i-norge/teori/elektronikk/
