lagt inn det vi har i bruksanvisning

--- a/src/_data/guides.yml
+++ b/src/_data/guides.yml
@@ -4,3 +4,5 @@
   link: /eit-satellitt-i-norge/instruksjoner/innkjopsliste/
 - name: Montering
   link: /eit-satellitt-i-norge/instruksjoner/montering/
+- name: Hvordan bruke mottakeren
+  link: /eit-satellitt-i-norge/instruksjoner/bruk/
